--- a/kafka-producer-wikimedia/src/main/resources/application.properties
+++ b/kafka-producer-wikimedia/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=kafka-producer-wikimedia
+
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.topic.name=wikimedia_recentchange
